# intern_challenge

./: CLAUDE.md  HISTORY.md  PLAN.md  PROGRESS.md  README.md  placement.py  pyproject.toml
ashvin/: abacus.py  config.py  connectivity.py  constructive.py  constructive_v2.py  debug_cluster.py  debug_swap.py  density.py  detailed.py  device_utils.py  global_swap.py  init_placement.py  instrumented_train.py  legalize.py  mid_row_refine.py  net_legalize.py  nuclear_loss.py  overlap.py  plot_comparison.py  plot_constructive_v2.py  plot_phase1_compare.py  projected_gd.py  repair.py  run_tests.py  sa_refine.py  shelf_legalizer.py  solver.py  story.md  swap_engine.py  test_global_swap.py  test_legalize.py  test_rowsnap.py  tune.py  tune_v2.py  verify_scalable.py  view.py  wl_legalize.py  wl_optimize.py
ashvin/results/: 20260321_151827_quick_check.csv  20260321_152039_naive_overlap.csv  20260321_160911_scalable_v1.csv  20260321_161439_scalable_v1_t11.csv  20260321_161617_scalable_cached.csv  20260321_162329_scalable_cached_t12.csv  20260321_162431_scalable_v1_full.csv  20260321_175445_density_off.csv  20260321_175547_density_v1.csv  20260321_180635_twostage_quick.csv  20260321_180839_twostage_v2.csv  20260321_181804_twostage_v3.csv  20260321_183439_repair_v1.csv  20260321_184644_config_default.csv  20260321_184822_config_aggressive.csv  20260321_191106_annealed_v1.csv  20260321_191552_annealed_single.csv  20260321_192046_legalize_v1.csv  20260321_192920_legalize_v2.csv  20260321_193234_legalize_v3.csv  20260321_201734_adaptive_v2.csv  20260321_203012_adaptive_t12.csv  (+34 more)
